; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/common/extr_dmtables.c_AdStoreTable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/common/extr_dmtables.c_AdStoreTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_TABLE_ORIGIN_INTERNAL_VIRTUAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @AdStoreTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AdStoreTable(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @AcpiTbGetNextTableDescriptor(i32* %8, i32** %7)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i64 @ACPI_FAILURE(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %3, align 4
  br label %25

15:                                               ; preds = %2
  %16 = load i32*, i32** %7, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @ACPI_PTR_TO_PHYSADDR(i32* %17)
  %19 = load i32, i32* @ACPI_TABLE_ORIGIN_INTERNAL_VIRTUAL, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @AcpiTbInitTableDescriptor(i32* %16, i32 %18, i32 %19, i32* %20)
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @AcpiTbValidateTable(i32* %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %15, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @AcpiTbGetNextTableDescriptor(i32*, i32**) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @AcpiTbInitTableDescriptor(i32*, i32, i32, i32*) #1

declare dso_local i32 @ACPI_PTR_TO_PHYSADDR(i32*) #1

declare dso_local i32 @AcpiTbValidateTable(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
